<resources>
    <string name="app_name">MusicalApp</string>
    <string name="title_activity_library">Library</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="album_art_of_the_song_band">Album art of the song/band</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="library">Library</string>
    <string name="name">Name</string>
    <string name="bandname">BandName</string>
    <string name="now_playing">Now Playing</string>
</resources>