<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/nowPlayingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:text="@string/now_playing"
        android:textSize="@dimen/standardTextSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/favoriteButton"/>
    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:text="@string/favorite"
        android:textSize="@dimen/standardTextSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:text="@string/search"
        android:textSize="@dimen/standardTextSize"
        app:layout_constraintLeft_toRightOf="@id/favoriteButton"
        app:layout_constraintTop_toTopOf="parent" />
    <ListView
        app:layout_constraintTop_toBottomOf="@id/nowPlayingButton"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standardSpacing" />
</androidx.constraintlayout.widget.ConstraintLayout>