<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/nowPlayingAlbumArt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/standardSpacing"
        android:layout_marginLeft="@dimen/standardSpacing"
        android:layout_marginRight="@dimen/standardSpacing"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/album_art_of_the_song_band"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/nowPlayingAlbumArt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standardDoubleSpacing"
        android:layout_marginTop="@dimen/standardSpacing"
        android:text="Song Title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/bandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist"
        android:layout_marginStart= "@dimen/standardDoubleSpacing"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/songName"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/playButton"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:insetLeft="15dp"
        android:layout_margin="@dimen/standardSpacing"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bandName" />
    <Button
        android:id="@+id/previousButton"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:gravity="center_horizontal"
        android:insetLeft="15dp"
        app:icon="@android:drawable/ic_media_previous"
        app:layout_constraintRight_toLeftOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/bandName" />
    <Button
        android:id="@+id/nextButton"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:gravity="center_horizontal"
        android:insetLeft="15dp"
        app:icon="@android:drawable/ic_media_next"
        app:layout_constraintLeft_toRightOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/bandName" />
    <Button
        android:id="@+id/libraryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:text="@string/library"
        android:textSize="@dimen/standardTextSize"
        app:layout_constraintRight_toLeftOf="@id/favoriteButton"
        app:layout_constraintTop_toBottomOf="@id/previousButton" />
    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:text="@string/favorite"
        android:textSize="@dimen/standardTextSize"
        android:clickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton" />
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardSpacing"
        android:text="@string/search"
        android:textSize="@dimen/standardTextSize"
        app:layout_constraintLeft_toRightOf="@id/favoriteButton"
        app:layout_constraintTop_toBottomOf="@id/nextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>